Fix 1px alignment error for code comments

--- a/raw/noc_html/stylesheets/code-html.css
+++ b/raw/noc_html/stylesheets/code-html.css
@@ -94,7 +94,7 @@ body .il { color: #666666; }                     /* Literal.Number.Integer.Long 
 }
 
 .one-line:first-child {
-  width: 60%;
+  width: 60.2%;
 }
 
 .no-comment .one-line:first-child {
@@ -139,7 +139,7 @@ a relatively positioned parent. */
   padding-left: 1.0em;
 
   /* hack to remove 1px white space in Safari on Lion */
-  left: -1px;
+  /*left: -1px;*/
 }
 
 /* The code goes in here. */
@@ -170,6 +170,5 @@ a relatively positioned parent. */
 }
 
 .stretch .code-comment {
-  padding-right: 0;
   padding-left: 1.0em;
 }
